--- a/Assets/stylesheet.css
+++ b/Assets/stylesheet.css
@@ -22,6 +22,8 @@ h1{
 h2{
   text-align: center;
   color: red;
+  background-color: black;
+  font-size: 30px;
 }
 nav{
   display: flex;
@@ -65,6 +67,10 @@ nav a:hover {
 .con a:hover {
   color: #fff;
 }
+#Aboutme{
+  color: white;
+  
+}
 .cards {
   flex: 1;
   display: flex;
@@ -84,10 +90,6 @@ img{
   background-color: rgb(223, 255, 255);
   text-align: center;
 }
-.Tcard > header {
-  padding: 20px;
-}
-
 .Tcard > img {
   width: 100%;
 }
@@ -102,7 +104,7 @@ img{
   padding: 5px;
   flex: 0 0 300px;
   margin: 20px;
-  min-width: 350px;
+  min-width: 375px;
   background-color: rgb(223, 255, 255);
   text-align: center;
 }
@@ -112,6 +114,7 @@ img{
 
 .card > img {
   width: 100%;
+  max-width: fit-content;
 }
 .card:hover {
   border-color: red;
